[tool.poetry]
name = "az-ai-healthcheck"
version = "0.1.5"
description = "Lightweight health checks for Azure OpenAI and Azure AI Vision"
authors = ["Minseok Song <minseok.song@mssong.com>"]
repository = "https://github.com/skytin1004/az-ai-healthcheck"
license = "MIT"
readme = "README.md"
keywords = ["azure", "openai", "vision", "healthcheck", "monitoring"]
packages = [{ include = "az_ai_healthcheck", from = "src" }]
 
[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.28,<3"
azure-ai-vision-imageanalysis = { version = "^1.0.0b2", optional = true }

[tool.poetry.extras]
vision = ["azure-ai-vision-imageanalysis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"